--- a/src/main/webapp/reportInstitution/report_opd_investigation_summery_by_category.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_investigation_summery_by_category.xhtml
@@ -122,6 +122,15 @@
                     </p:outputLabel>
 
                 </p:column>              
+                <p:column headerText="Vat Fee" style="text-align: right;">
+                    <f:facet name="header">
+                        <h:outputLabel value="Vat Fee" />
+                    </f:facet>
+                    <p:outputLabel value="#{d.vatFee}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+
+                </p:column>              
 
                 <p:columnGroup type="footer">
                     <p:row>
