Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -246,7 +246,7 @@
                                 </p:panel>
                                 </h:panelGrid>
                             <h:panelGrid columns="1">
-                                <p:panel header="(3) Administration" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
+                                <p:panel header="(3) Administration" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     <h:panelGrid columns="1">
                                         <p:commandButton value="(1) Department Report " 
                                                          action="hr_report_department" 
