Investigation Bill List Signed-off-by: Ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/reportLab/report_lab.xhtml
+++ b/src/main/webapp/reportLab/report_lab.xhtml
@@ -48,6 +48,15 @@
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
+                            
+                            <h:panelGrid columns="1" >
+                                <p:panel header="4) Lab Investigation Bill List" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
+                                    <h:panelGrid columns="1" >                            
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="1)Investigation Bill List" action="report_lab_investigation_bill_list.xhtml"/>
+                                       
+                                    </h:panelGrid>
+                                </p:panel>
+                            </h:panelGrid>
 
                         </h:panelGrid>
                     </p:panel>
